--- a/Nimbus.csproj
+++ b/Nimbus.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <Reference Include="ResoniteModLoader">
-      <HintPath>$(ResonitePath)Libraries\ResoniteModLoader.dll</HintPath>
+      <HintPath>$(ResonitePath)mod_loader\ResoniteModLoader.dll</HintPath>
     </Reference>
     <Reference Include="0Harmony">
       <HintPath>$(ResonitePath)0Harmony.dll</HintPath>
